# sidhe

./: Cargo.toml  build.rs
src/: app.rs  game_window.rs  main.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shader.wgsl  shader2.frag  shader2.frag.spv  vertex_buffer.rs
src/graphics/: device.rs  graphic_system.rs  mod.rs  pipeline.rs  sprite.rs  sprite.wgsl.frag  sprite.wgsl.vert  swap_chain.rs  texture.rs  vertex.rs
