[package]
name = "gin"
version = "0.1.0"
authors = ["Aoife <aoifeebradley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
image = "0.23.14"
winit = "0.24"
wgpu = "0.8.1"
env_logger = "0.7"
futures = "0.3"
cgmath = "0.18"
raw-window-handle = "0.3.3"
bytemuck = {version = "1.5.1", features = ["derive"]}


[build-dependencies]
anyhow = "1.0.40"
fs_extra = "1.1"
glob = "0.3"
